@@ -17,6 +17,7 @@
 package org.apache.kafka.common.security.oauthbearer.internals.unsecured;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.regex.Pattern;
@@ -65,7 +66,7 @@ public class OAuthBearerScopeUtils {
                 retval.add(individualScopeItem);
             }
         }
-        return List.copyOf(retval);
+        return Collections.unmodifiableList(retval);
     }
 
     private OAuthBearerScopeUtils() {
